revert to local build docker container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,11 @@
 {
-    "image": "ghcr.io/musicalninjas/pyo3-devcontainer:latest",
-    // "build": {
-    //     "dockerfile": "Dockerfile",
-    //     "args": {
-    //         "USERNAME": "fizzbuzz"
-    //     }
-    // },
+    // "image": "ghcr.io/musicalninjas/pyo3-devcontainer:latest", // untested with mac, expect issues due to x_64 rust installation
+    "build": {
+        "dockerfile": "Dockerfile",
+        "args": {
+            "USERNAME": "fizzbuzz"
+        }
+    },
     "customizations": {
         "vscode": {
             "extensions": [
