Fix python import error (#22)
move python packages to dedicated python directory as per https://github.com/PyO3/maturin/pull/855

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
 {
+    // "image": "ghcr.io/musicalninjas/pyo3-devcontainer:latest", // untested with mac, expect issues due to x_64 rust installation
     "build": {
         "dockerfile": "Dockerfile",
         "args": {
