--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,11 @@ Issues = "https://github.com/MusicalNinjaDad/fizzbuzz/issues"
 version = { file = "__pyversion__" }
 
 [tool.setuptools.packages.find]
-where = ["fizzbuzz"]
+where = ["python"]
 
 [[tool.setuptools-rust.ext-modules]]
 # Private Rust extension module to be nested into the Python package
-target = "fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
+target = "fizzbuzz.fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
 # but you can add a prefix to nest it inside of a Python package.
 path = "fizzbuzzo3/Cargo.toml"
 binding = "PyO3"
@@ -78,7 +78,7 @@ addopts = [
 
 [tool.coverage.run]
 branch = true
-omit = ["test_*"]
+omit = ["test_*", "tests/*"]
 dynamic_context = "test_function"
 
 [tool.ruff]
