--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ where = ["python"]
 
 [[tool.setuptools-rust.ext-modules]]
 # Private Rust extension module to be nested into the Python package
-target = "fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
+target = "fizzbuzz.fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
 # but you can add a prefix to nest it inside of a Python package.
 path = "fizzbuzzo3/Cargo.toml"       # Default value, can be omitted
 binding = "PyO3"                     # Default value, can be omitted
