--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,9 @@ skip = [
 before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal && cargo install just && just clean"
 environment = { PATH = "$HOME/.cargo/bin:$PATH" }
 archs = "all"
-test-command = "pytest {package}"
+# `test-command` will FAIL if only passed `pytest {package}`
+# as this tries to resolve imports based on source files (where there is no `.so` for rust libraries), not installed wheel
+test-command = "pytest {package}/tests"
 test-extras = "test"
 
 [tool.cibuildwheel.macos]
