pass tests location to pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,9 @@ addopts = [
     "--doctest-mdcodeblocks",
     "--doctest-glob='*.md'",
 ]
+testpaths = [
+    "tests",
+]
 
 [tool.coverage.run]
 branch = true
