--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ where = ["python"]
 # Private Rust extension module to be nested into the Python package
 target = "fizzbuzz.fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
 # but you can add a prefix to nest it inside of a Python package.
-path = "fizzbuzzo3/Cargo.toml"       # Default value, can be omitted
+path = "rust/fizzbuzzo3/Cargo.toml"       # Default value, can be omitted
 binding = "PyO3"                     # Default value, can be omitted
 features = ["pyo3/extension-module"]
 
