add a meaningful docstring and TEST docstrings in `pyi` files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,10 +74,12 @@ xfail_strict = true
 addopts = [
     "--doctest-modules",
     "--doctest-mdcodeblocks",
-    "--doctest-glob='*.md'",
+    "--doctest-glob=*.pyi",
+    "--doctest-glob=*.md",
 ]
 testpaths = [
     "tests",
+    "python"
 ]
 
 [tool.coverage.run]
