--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,13 @@ Issues = "https://github.com/MusicalNinjaDad/fizzbuzz/issues"
 version = { file = "__pyversion__" }
 
 [tool.setuptools.packages.find]
-where = ["fizzbuzzpy"]
+where = ["python"]
 
 [[tool.setuptools-rust.ext-modules]]
 # Private Rust extension module to be nested into the Python package
-target = "fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
+target = "fizzbuzz.fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
 # but you can add a prefix to nest it inside of a Python package.
-path = "fizzbuzzo3/Cargo.toml"       # Default value, can be omitted
+path = "rust/fizzbuzzo3/Cargo.toml"       # Default value, can be omitted
 binding = "PyO3"                     # Default value, can be omitted
 features = ["pyo3/extension-module"]
 
@@ -51,7 +51,9 @@ skip = [
 before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal && cargo install just && just clean"
 environment = { PATH = "$HOME/.cargo/bin:$PATH" }
 archs = "all"
-test-command = "pytest {package}"
+# `test-command` will FAIL if only passed `pytest {package}`
+# as this tries to resolve imports based on source files (where there is no `.so` for rust libraries), not installed wheel
+test-command = "pytest {package}/tests"
 test-extras = "test"
 
 [tool.cibuildwheel.macos]
@@ -72,7 +74,12 @@ xfail_strict = true
 addopts = [
     "--doctest-modules",
     "--doctest-mdcodeblocks",
-    "--doctest-glob='*.md'",
+    "--doctest-glob=*.pyi",
+    "--doctest-glob=*.md",
+]
+testpaths = [
+    "tests",
+    "python"
 ]
 
 [tool.coverage.run]
