--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,5 @@
 {
-    "build": {
-        "dockerfile": "Dockerfile",
-        "args": {
-            "USERNAME": "fizzbuzz"
-        }
-    },
+    "image": "ghcr.io/musicalninjas/pyo3-devcontainer",
     "customizations": {
         "vscode": {
             "extensions": [
