--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -28,6 +28,19 @@ jobs:
       matrix:
         # macos-13 is an intel runner, macos-14 is apple silicon
         os: [ubuntu-latest, windows-latest, macos-13, macos-14]
+        include:
+        - os: ubuntu-latest
+          target: '*x86*'
+        - os: ubuntu-latest
+          target: '*i686*'
+        - os: ubuntu-latest
+          target: '*manylinux_aarch64*'
+        - os: ubuntu-latest
+          target: '*musllinux_aarch64*'
+        - os: ubuntu-latest
+          target: '*ppc64le*'
+        - os: ubuntu-latest
+          target: '*s390x*'
     steps:
       - uses: actions/checkout@v4
       - name: Set up QEMU
@@ -37,6 +50,8 @@ jobs:
           platforms: all
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.18.0
+        env:
+          CIBW_BUILD: ${{ matrix.target }}
         # with:
         #   package-dir: .
         #   output-dir: wheelhouse
