--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,20 +47,19 @@ skip = [
     "*-musllinux_s390x",   # no rust target available.
 ]
 # Use prebuilt copies of pypa images with rust and just ready compiled (saves up to 25 mins on emulated archs)
-manylinux-x86_64-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2010_x86_64-rust"
-manylinux-i686-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2010_i686-rust"
+manylinux-x86_64-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014_x86_64-rust"
+manylinux-i686-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014_i686-rust"
 manylinux-aarch64-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014_aarch64-rust"
 manylinux-ppc64le-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014_ppc64le-rust"
 manylinux-s390x-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014_s390x-rust"
-manylinux-pypy_x86_64-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2010_x86_64-rust"
-manylinux-pypy_i686-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2010_i686-rust"
+manylinux-pypy_x86_64-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014_x86_64-rust"
+manylinux-pypy_i686-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014_i686-rust"
 manylinux-pypy_aarch64-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014_aarch64-rust"
 musllinux-x86_64-image = "ghcr.io/musicalninjas/quay.io/pypa/musllinux_1_2_x86_64-rust"
 musllinux-aarch64-image = "ghcr.io/musicalninjas/quay.io/pypa/musllinux_1_2_aarch64-rust"
 
 [tool.cibuildwheel.linux]
-before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal && cargo install just && just clean"
-environment = { PATH = "$HOME/.cargo/bin:$PATH" }
+before-all = "just clean"
 archs = "all"
 # `test-command` will FAIL if only passed `pytest {package}`
 # as this tries to resolve imports based on source files (where there is no `.so` for rust libraries), not installed wheel
