--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -42,6 +42,9 @@ jobs:
           target: '*ppc64le*'
         - os: ubuntu-latest
           target: '*s390x*'
+        exclude:
+        - os: ubuntu-latest
+          target: '*'
     steps:
       - uses: actions/checkout@v4
       - name: Set up QEMU
