--- a/.github/workflows/tag-pr.yml
+++ b/.github/workflows/tag-pr.yml
@@ -8,8 +8,26 @@ jobs:
   tag:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-    - uses: actions/github-script@v7
+    - name: create tag object
+      uses: actions/github-script@v7
+      # https://octokit.github.io/rest.js/v20#git does not document an option to update a tag object ...
+      with:
+        script: |
+          github.rest.git.createTag({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            tag: PR${{ github.event.number }}
+            message: ${{ github.event.pull_request.title }}
+            object: context.sha
+            type: commit
+            tagger.name: ${{ github.event.sender.name }}
+            tagger.email: ${{ github.event.sender.email }}
+          })
+    - name: create tag git ref
+      uses: actions/github-script@v7
       with:
         script: |
           github.rest.git.createRef({
