--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -21,70 +21,19 @@ jobs:
     - name: Test fizzbuzzo3
       run: cargo test --workspace
 
-  wheels:
-    name: Build wheels on ${{ matrix.os }} - ${{ matrix.target }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        # macos-13 is an intel runner, macos-14 is apple silicon
-        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
-        target: ['*']
-        include:
-        - os: ubuntu-latest
-          target: '*x86*'
-        - os: ubuntu-latest
-          target: '*i686*'
-        - os: ubuntu-latest
-          target: '*manylinux_aarch64*'
-        - os: ubuntu-latest
-          target: '*musllinux_aarch64*'
-        - os: ubuntu-latest
-          target: '*ppc64le*'
-        - os: ubuntu-latest
-          target: '*s390x*'
-        exclude:
-        - os: ubuntu-latest
-          target: '*'
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up QEMU
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.18.0
-        env:
-          CIBW_BUILD: ${{ matrix.target }}
-        # with:
-        #   package-dir: .
-        #   output-dir: wheelhouse
-        #   config-file: "{package}/pyproject.toml"
-      - uses: actions/upload-artifact@v4
-        with:
-          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
-          path: ./wheelhouse/*.whl
-      
-  sdist:
-    name: Make SDist
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Build SDist
-      run: pipx run build --sdist
-    - uses: actions/upload-artifact@v4
-      with:
-        name: cibw-sdist
-        path: dist/*.tar.gz
+  builds:
+    uses: ./.github/workflows/build.yml
+    with:
+      prefix: cibwru
 
   publish:
     environment: ADO-Packages
-    needs: [python-checks, rust-checks, wheels, sdist]
+    needs: [python-checks, rust-checks, builds]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/download-artifact@v4
       with:
-        pattern: cibw-*
+        pattern: cibwru-*
         path: dist
         merge-multiple: true
     - name: Install tooling
