--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v4
       with:
-        pattern: cibwru-*
+        pattern: cibw-*
         path: dist
         merge-multiple: true
     - name: Install tooling
