--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -22,7 +22,7 @@ jobs:
       run: cargo test --workspace
 
   builds:
-    uses: musicalninjas/cibuildwheel-rust@v0.1.0
+    uses: musicalninjas/cibuildwheel-rust@build_pypa
 
   publish:
     environment: ADO-Packages
