--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -22,7 +22,7 @@ jobs:
       run: cargo test --workspace
 
   builds:
-    name: Build
+    name: Build-test
     uses: musicalninjas/cibuildwheel-rust@build_pypa
 
   publish:
