--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -22,9 +22,7 @@ jobs:
       run: cargo test --workspace
 
   builds:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: musicalninjas/cibuildwheel-rust@build_pypa
+    uses: musicalninjas/cibuildwheel-rust/.github/workflows/build.yml@build_pypa
 
   publish:
     environment: ADO-Packages
