Revert "try calling from mn/cibw-ru .gh/workflows"
This reverts commit d99353077be5765e1739fc13db2a7442f553d44a.

--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -22,7 +22,9 @@ jobs:
       run: cargo test --workspace
 
   builds:
-    uses: musicalninjas/cibuildwheel-rust/.github/workflows/build.yml@build_pypa
+    runs-on: ubuntu-latest
+    steps:
+    - uses: musicalninjas/cibuildwheel-rust@build_pypa
 
   publish:
     environment: ADO-Packages
