--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,19 +58,20 @@ manylinux-pypy_aarch64-image = "ghcr.io/musicalninjas/quay.io/pypa/manylinux2014
 musllinux-x86_64-image = "ghcr.io/musicalninjas/quay.io/pypa/musllinux_1_2_x86_64-rust"
 musllinux-aarch64-image = "ghcr.io/musicalninjas/quay.io/pypa/musllinux_1_2_aarch64-rust"
 
-[tool.cibuildwheel.linux]
-before-all = "just clean"
-archs = "all"
 # `test-command` will FAIL if only passed `pytest {package}`
 # as this tries to resolve imports based on source files (where there is no `.so` for rust libraries), not installed wheel
 test-command = "pytest {package}/tests"
 test-extras = "test"
 
+[tool.cibuildwheel.linux]
+before-all = "just clean"
+archs = "all"
+
 [tool.cibuildwheel.macos]
-before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
+before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal && cargo install just && just clean"
 
 [tool.cibuildwheel.windows]
-before-all = "rustup target add aarch64-pc-windows-msvc i586-pc-windows-msvc i686-pc-windows-msvc x86_64-pc-windows-msvc"
+before-all = "rustup target add aarch64-pc-windows-msvc i586-pc-windows-msvc i686-pc-windows-msvc x86_64-pc-windows-msvc && cargo install just && just clean"
 before-build = "pip install delvewheel"
 repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
 
