--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -45,7 +45,9 @@ jobs:
       run: |
         pytest --cov
     - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
 
   lint:
     runs-on: ubuntu-latest
