--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -57,4 +57,6 @@ jobs:
           pwd
           ls -al
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
