--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -58,5 +58,5 @@ jobs:
           ls -al
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          use_oidc: true
