--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        use_oidc: true
 
   lint:
     runs-on: ubuntu-latest
