--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,6 +35,8 @@ jobs:
       run: cargo clippy
 
   coverage:
+    permissions: 
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
