--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -41,15 +41,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -e .[dev]
-        python -m pip install pytest-cov
+        python -m pip install -e .[test]
     - name: Test with pytest
       run: |
-        pytest --cov
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        use_oidc: true
+        pytest
 
   lint:
     runs-on: ubuntu-latest
