--- a/codecov.yml
+++ b/codecov.yml
@@ -9,3 +9,9 @@ coverage:
 ignore:
   - "**/tests" # all `tests` folders
   - "target"
+comment:
+  layout: "condensed_header, condensed_files, flags, condensed_footer"
+  require_changes: true
+  require_base: false
+  require_head: false
+  hide_project_coverage: true
