ignore all tests?

--- a/codecov.yml
+++ b/codecov.yml
@@ -7,7 +7,7 @@ coverage:
       default:
         informational: true
 ignore:
-  - "**/tests" # all `tests` folders
+  - "**/tests/*" # all `tests` folders
   - "target"
 comment:
   layout: "condensed_header, condensed_files, flags, condensed_footer"
