--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,8 @@ repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
 [project.optional-dependencies]
 lint = ["ruff"]
 test = ["pytest", "pytest-doctest-mkdocstrings"]
-dev = ["fizzbuzz[lint,test]"]
+cov = ["fizzbuzz[test]","pytest-cov"]
+dev = ["fizzbuzz[lint,test,cov]"]
 
 [tool.pytest.ini_options]
 xfail_strict = true
@@ -95,7 +96,7 @@ testpaths = [
 
 [tool.coverage.run]
 branch = true
-omit = ["test_*"]
+omit = ["tests/*"]
 dynamic_context = "test_function"
 
 [tool.ruff]
