--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ plugins:
 markdown_extensions:
 - admonition
 - pymdownx.details
+- pymdownx.snippets
 - pymdownx.superfences:
     custom_fences:
     - name: mermaid
