show output of just reset check as it runs ...

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -58,7 +58,5 @@
             }
         }
     },
-    "updateContentCommand": {
-        "reset-check": "just reset check"
-    }
+    "updateContentCommand": "just reset check"
 }
