--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,12 +33,12 @@ version = { file = "__pyversion__" }
 where = ["python"]
 
 [[tool.setuptools-rust.ext-modules]]
-# Private Rust extension module to be nested into the Python package
-target = "fizzbuzz.fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
+# The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
 # but you can add a prefix to nest it inside of a Python package.
-path = "rust/fizzbuzzo3/Cargo.toml"  # Default value, can be omitted
-binding = "PyO3"                     # Default value, can be omitted
-features = ["pyo3/extension-module"]
+target = "fizzbuzz.fizzbuzzo3"
+path = "rust/fizzbuzzo3/Cargo.toml"
+binding = "PyO3"
+features = ["pyo3/extension-module"] # IMPORTANT!!!
 
 [tool.cibuildwheel]
 skip = [
