--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,8 @@ plugins:
 markdown_extensions:
 - admonition
 - pymdownx.details
+- pymdownx.highlight
+- pymdownx.inlinehilite
 - pymdownx.snippets:
     url_download: true
 - pymdownx.superfences:
