--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,7 +44,8 @@
                     "MD046": false // {"style": "fenced"} leads to errors on codeblocks in admonitions
                 },
                 "[markdown]": {
-                    "editor.tabSize": 2
+                    "editor.tabSize": 2,
+                    "editor.detectIndentation": false
                 },
                 // DISABLE spell checking for now as exclusions not working ... TODO
                 // "cSpell.language": "en",
