--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,6 @@
             "extensions": [
                 // rust
                 "rust-lang.rust-analyzer",
-                "andrewbrey.rust-test-highlight",
                 // python
                 "ms-python.python",
                 "ms-python.vscode-pylance",
@@ -13,6 +12,9 @@
                 // configs, docs, etc.
                 "DavidAnson.vscode-markdownlint",
                 "tamasfe.even-better-toml"
+                // DISABLE spell checking for now as exclusions not working ... TODO
+                // "streetsidesoftware.code-spell-checker",
+                // "streetsidesoftware.code-spell-checker-british-english"
             ],
             "settings": {
                 // rust
@@ -31,6 +33,25 @@
                         120
                     ]
                 },
+                // docs
+                "markdownlint.config": {
+                    "MD013": false, // let the editor wrap lines not the author
+                    // multi-paragraph admonitions in mkdocs-material are considered indented code blocks
+                    // see also ... for possible improvements via a plugin:
+                    // - https://github.com/DavidAnson/vscode-markdownlint/issues/180
+                    // - https://github.com/DavidAnson/vscode-markdownlint/issues/302
+                    // - https://github.com/DavidAnson/markdownlint/issues/209
+                    "MD046": false // {"style": "fenced"} leads to errors on codeblocks in admonitions
+                },
+                "[markdown]": {
+                    "editor.tabSize": 2,
+                    "editor.detectIndentation": false
+                },
+                // DISABLE spell checking for now as exclusions not working ... TODO
+                // "cSpell.language": "en",
+                // "cSpell.checkOnlyEnabledFileTypes": true,
+                // "cSpell.enabledFileTypes": {"markdown": true, "json": false},
+                
                 // shell
                 "terminal.integrated.defaultProfile.linux": "bash",
                 "terminal.integrated.profiles.linux": {
@@ -41,7 +62,5 @@
             }
         }
     },
-    "updateContentCommand": {
-        "reset-check": "just reset check"
-    }
+    "updateContentCommand": "just reset check"
 }
