--- a/rust/fizzbuzzo3/Cargo.toml
+++ b/rust/fizzbuzzo3/Cargo.toml
@@ -9,7 +9,8 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]  # cdylib required for python import, rlib required for rust tests.
 
 [dependencies]
-pyo3 = { git = "https://github.com/MusicalNinjaDad/pyo3.git", branch = "pyo3-testing" }
+pyo3 = "0.21.2"
+pyo3-testing = "0.1.0"
 fizzbuzz = { path = "../fizzbuzz" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
