--- a/rust/fizzbuzz/Cargo.toml
+++ b/rust/fizzbuzz/Cargo.toml
@@ -9,11 +9,11 @@ path = "src/lib.rs"
 crate-type = ["rlib"]  # cdylib required for python import, rlib required for rust tests.
 
 [dependencies]
-rayon = "1.10.0"
+rayon = "=1.10.0"
 
 [dev-dependencies]
-googletest = "0.11.0"
-criterion = { version = "0.5", features = ["html_reports"] }
+googletest = "=0.11.0"
+criterion = { version = "=0.5.1", features = ["html_reports"] }
 
 [[bench]]
 name = "bench_fizzbuzz"
