--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
             "extensions": [
                 // rust
                 "rust-lang.rust-analyzer",
+                "vadimcn.vscode-lldb",
                 // python
                 "ms-python.python",
                 "ms-python.vscode-pylance",
