--- a/rust/fizzbuzz/Cargo.toml
+++ b/rust/fizzbuzz/Cargo.toml
@@ -19,4 +19,9 @@ criterion = { version = "0.5", features = ["html_reports"] }
 name = "bench_fizzbuzz"
 harness = false
 
+[[bench]]
+name = "bench_sizes"
+harness = false
+
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
