--- a/rust/fizzbuzz/Cargo.toml
+++ b/rust/fizzbuzz/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fizzbuzz"
-version = "2.1.0"
+version = "3.0.0"
 edition = "2021"
 
 [lib]
@@ -18,5 +18,10 @@ criterion = { version = "0.5", features = ["html_reports"] }
 [[bench]]
 name = "bench_fizzbuzz"
 harness = false
+
+[[bench]]
+name = "bench_sizes"
+harness = false
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
