--- a/rust/fizzbuzzo3/Cargo.toml
+++ b/rust/fizzbuzzo3/Cargo.toml
@@ -12,5 +12,6 @@ crate-type = ["cdylib"]  # cdylib required for python import, rlib required for 
 pyo3 = "0.21.2"
 pyo3-testing = "0.3.4"
 fizzbuzz = { path = "../fizzbuzz" }
+rayon = "1.10.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
