run python tests when changing fizzbuzzo3

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths: 
     - "**.py"
+    - "rust/fizzbuzzo3/src/*.rs"
     - "pyproject.toml"
     - ".github/workflows/python.yml"
   pull_request:
