optimise build with --release (4-7x speed increases)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@
     path = "rust/fizzbuzzo3/Cargo.toml"
     binding = "PyO3"
     features = ["pyo3/extension-module"] # IMPORTANT!!!
+    args = ["--release"]
 
 [tool.cibuildwheel]
     skip = [
