pyo3-testing is only needed in dev, not release

--- a/rust/fizzbuzzo3/Cargo.toml
+++ b/rust/fizzbuzzo3/Cargo.toml
@@ -10,8 +10,10 @@ crate-type = ["cdylib"]  # cdylib required for python import, rlib required for 
 
 [dependencies]
 pyo3 = "0.21.2"
-pyo3-testing = "0.3.4"
 fizzbuzz = { path = "../fizzbuzz" }
 rayon = "1.10.0"
+
+[dev-dependencies]
+pyo3-testing = "0.3.4"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
