--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -57,7 +57,7 @@ jobs:
           LLVM_PROFILE_FILE: tests-%p-%m.profraw
       - name: analyse coverage
         run: |
-          grcov . -s . --binary-path ./target/debug/ -t cobertura --branch --ignore-not-existing --output-path .
+          grcov . -s . --binary-path ./target/debug/ -t cobertura --branch --ignore-not-existing --excl-line GRCOV_EXCL_LINE --output-path .
           pwd
           ls -al
       - name: Upload coverage reports to Codecov
