--- a/rust/fizzbuzzo3/Cargo.toml
+++ b/rust/fizzbuzzo3/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fizzbuzzo3"
-version = "1.3.0"
+version = "2.1.0" # Tracks python version
 edition = "2021"
 
 [lib]
@@ -9,8 +9,11 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]  # cdylib required for python import, rlib required for rust tests.
 
 [dependencies]
-pyo3 = "0.21.2"
-pyo3-testing = "0.3.4"
 fizzbuzz = { path = "../fizzbuzz" }
+pyo3 = "0.21.2"
+rayon = "1.10.0"
+
+[dev-dependencies]
+pyo3-testing = "0.3.4"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
