--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,8 @@
 
     [tool.cibuildwheel.macos]
         before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal && cargo install just && just clean"
+        before-build = "pwd && ls -al"
+        before-test = "pwd && ls -al"
 
     [tool.cibuildwheel.windows]
         before-all = "rustup target add aarch64-pc-windows-msvc i586-pc-windows-msvc i686-pc-windows-msvc x86_64-pc-windows-msvc && cargo install just && just clean"
